[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "empy-ws"
version = "0.0.1"
authors = [
  { name="Michael Batchelor", email="mickbatch98@gmail.com" },
]
description = "Python wrapper for Emscripten websockets API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
